@@ -15,6 +15,7 @@ Revision history for Net-Silverpeak-Orchestrator
     - add get_addressgroup method
     - add delete_addressgroup method
     - add update_addressgroup method
+    - add list_servicegroup_names method
 
 0.001002  2021-02-19 07:35:30+01:00 Europe/Vienna
     - fix Data::Dumper::Concise usage in t/api.t
